---
source: crates/ruff/src/rules/tryceratops/mod.rs
expression: diagnostics
---
- - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 12
      column: 8
    end_location:
      row: 12
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 19
      column: 8
    end_location:
      row: 19
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 30
      column: 8
    end_location:
      row: 30
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 37
      column: 8
    end_location:
      row: 37
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 44
      column: 8
    end_location:
      row: 44
      column: 36
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 51
      column: 8
    end_location:
      row: 51
      column: 35
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 58
      column: 8
    end_location:
      row: 58
      column: 35
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 65
      column: 8
    end_location:
      row: 65
      column: 25
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 72
      column: 8
    end_location:
      row: 72
      column: 29
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 79
      column: 8
    end_location:
      row: 79
      column: 32
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 86
      column: 8
    end_location:
      row: 86
      column: 32
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 95
      column: 8
    end_location:
      row: 97
      column: 9
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 104
      column: 8
    end_location:
      row: 104
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 111
      column: 8
    end_location:
      row: 111
      column: 35
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 118
      column: 8
    end_location:
      row: 118
      column: 33
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 125
      column: 8
    end_location:
      row: 125
      column: 32
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 132
      column: 8
    end_location:
      row: 132
      column: 32
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 139
      column: 8
    end_location:
      row: 139
      column: 31
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 146
      column: 8
    end_location:
      row: 146
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 153
      column: 8
    end_location:
      row: 153
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 160
      column: 8
    end_location:
      row: 160
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 167
      column: 8
    end_location:
      row: 167
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 174
      column: 8
    end_location:
      row: 174
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 181
      column: 8
    end_location:
      row: 181
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 188
      column: 8
    end_location:
      row: 188
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 195
      column: 8
    end_location:
      row: 195
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 202
      column: 8
    end_location:
      row: 202
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 209
      column: 8
    end_location:
      row: 209
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 216
      column: 8
    end_location:
      row: 216
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 223
      column: 8
    end_location:
      row: 223
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 230
      column: 8
    end_location:
      row: 230
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 267
      column: 8
    end_location:
      row: 267
      column: 31
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 277
      column: 8
    end_location:
      row: 277
      column: 31
    fix: ~
    parent: ~
  - kind:
      name: TypeCheckWithoutTypeError
      body: "Prefer `TypeError` exception for invalid type"
      suggestion: ~
      fixable: false
    location:
      row: 288
      column: 8
    end_location:
      row: 288
      column: 31
    fix: ~
    parent: ~

